// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`double pop:  - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "location": Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/",
      "search": "",
      "state": Object {},
      "url": "/",
    },
    "params": Object {},
    "pathname": "/",
    "query": Object {},
    "search": "",
    "state": Object {},
    "type": "FIRST",
    "url": "/",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "location": Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/second",
      "search": "",
      "state": Object {},
      "url": "/second",
    },
    "params": Object {},
    "pathname": "/second",
    "query": Object {},
    "search": "",
    "state": Object {},
    "type": "SECOND",
    "url": "/second",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "location": Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/third",
      "search": "",
      "state": Object {},
      "url": "/third",
    },
    "params": Object {},
    "pathname": "/third",
    "query": Object {},
    "search": "",
    "state": Object {},
    "type": "THIRD",
    "url": "/third",
  },
]
`;

exports[`double pop:  - history_index 1`] = `1`;

exports[`double pop:  - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "location": Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "state": Object {},
          "url": "/",
        },
        "params": Object {},
        "pathname": "/",
        "query": Object {},
        "search": "",
        "state": Object {},
        "type": "FIRST",
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "location": Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
        "params": Object {},
        "pathname": "/second",
        "query": Object {},
        "search": "",
        "state": Object {},
        "type": "SECOND",
        "url": "/second",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "location": Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {},
          "url": "/third",
        },
        "params": Object {},
        "pathname": "/third",
        "query": Object {},
        "search": "",
        "state": Object {},
        "type": "THIRD",
        "url": "/third",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "back",
    "length": 3,
    "pathname": "/second",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "location": Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": Object {},
            "url": "/",
          },
          "params": Object {},
          "pathname": "/",
          "query": Object {},
          "search": "",
          "state": Object {},
          "type": "FIRST",
          "url": "/",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "location": Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
          "params": Object {},
          "pathname": "/second",
          "query": Object {},
          "search": "",
          "state": Object {},
          "type": "SECOND",
          "url": "/second",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "location": Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/third",
            "search": "",
            "state": Object {},
            "url": "/third",
          },
          "params": Object {},
          "pathname": "/third",
          "query": Object {},
          "search": "",
          "state": Object {},
          "type": "THIRD",
          "url": "/third",
        },
      ],
      "hash": "",
      "index": 2,
      "kind": "push",
      "length": 3,
      "params": Object {},
      "pathname": "/third",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "THIRD",
      "url": "/third",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`double pop:  - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`double pop:  - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`double pop:  - routes - SECOND - beforeEnter 1`] = `2`;

exports[`double pop:  - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "location": Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "state": Object {},
          "url": "/",
        },
        "params": Object {},
        "pathname": "/",
        "query": Object {},
        "search": "",
        "state": Object {},
        "type": "FIRST",
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "location": Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
        "params": Object {},
        "pathname": "/second",
        "query": Object {},
        "search": "",
        "state": Object {},
        "type": "SECOND",
        "url": "/second",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "location": Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {},
          "url": "/third",
        },
        "params": Object {},
        "pathname": "/third",
        "query": Object {},
        "search": "",
        "state": Object {},
        "type": "THIRD",
        "url": "/third",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "back",
    "length": 3,
    "params": Object {},
    "pathname": "/second",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "location": Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": Object {},
            "url": "/",
          },
          "params": Object {},
          "pathname": "/",
          "query": Object {},
          "search": "",
          "state": Object {},
          "type": "FIRST",
          "url": "/",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "location": Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
          "params": Object {},
          "pathname": "/second",
          "query": Object {},
          "search": "",
          "state": Object {},
          "type": "SECOND",
          "url": "/second",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "location": Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/third",
            "search": "",
            "state": Object {},
            "url": "/third",
          },
          "params": Object {},
          "pathname": "/third",
          "query": Object {},
          "search": "",
          "state": Object {},
          "type": "THIRD",
          "url": "/third",
        },
      ],
      "hash": "",
      "index": 2,
      "kind": "push",
      "length": 3,
      "params": Object {},
      "pathname": "/third",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "THIRD",
      "url": "/third",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`double pop:  - title 1`] = `"SECOND"`;
